[gd_scene load_steps=8 format=1]

[ext_resource path="res://ui/ingame_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/white_box.png" type="Texture" id=2]
[ext_resource path="res://ui/GodoM.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 27
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.784314, 0.0941176, 0.807843, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.356863, 0.223529, 0.247059, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=4]

font/size = 10
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="ingame_ui" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 450.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Knight_life1" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 75.0
margin/right = 55.0
margin/bottom = 105.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="life" type="Label" parent="Knight_life1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "LIFE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Knight_life1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Knight_hp1" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 106.0
margin/right = 55.0
margin/bottom = 136.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="hp" type="Label" parent="Knight_hp1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "KNIGHT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Knight_hp1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mother_hp1" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 106.0
margin/right = 395.0
margin/bottom = 136.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="hp" type="Label" parent="Mother_hp1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "SHIP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Mother_hp1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mother_hp2" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = -448.0
margin/right = 395.0
margin/bottom = -418.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="hp" type="Label" parent="Mother_hp2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "SHIP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Mother_hp2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Knight_life2" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = -448.0
margin/right = 55.0
margin/bottom = -418.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="life" type="Label" parent="Knight_life2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "LIFE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Knight_life2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Knight_hp2" type="TextureFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = -417.0
margin/right = 55.0
margin/bottom = -387.0
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="hp" type="Label" parent="Knight_hp2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 15.0
text = "KNIGHT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Knight_hp2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 50.0
margin/bottom = 30.0
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Skill_status" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 125.0
margin/top = 81.0
margin/right = 278.0
margin/bottom = 161.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.0134277, 0.0859375, 1 )
custom_colors/font_color_shadow = Color( 0.11261, 0.703125, 0.412481, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
text = "<스킬준비중>"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Error_status" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 125.0
margin/top = 69.0
margin/right = 278.0
margin/bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
text = "<에러메세지>"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Energy_bar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 175.0
margin/right = 400.0
margin/bottom = 190.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 1.0
range/step = 1.0
range/page = 0.0
range/value = 0.1
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Skill1" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -300.0
margin/right = 45.0
margin/bottom = -236.0
custom_fonts/font = SubResource( 4 )
text = "TURRET\n(2)"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="Skill1"]

visibility/opacity = 0.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
clip_text = true

[node name="Skill2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -220.0
margin/right = 45.0
margin/bottom = -156.0
custom_fonts/font = SubResource( 4 )
text = "TURRET\n(2)"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="Skill2"]

visibility/opacity = 0.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
clip_text = true

[node name="Skill3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -140.0
margin/right = 45.0
margin/bottom = -76.0
custom_fonts/font = SubResource( 4 )
text = "TURRET\n(2)"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="Skill3"]

visibility/opacity = 0.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
clip_text = true

[node name="Skill4" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -60.0
margin/right = 45.0
margin/bottom = 4.0
custom_fonts/font = SubResource( 4 )
text = "TURRET\n(2)"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="Skill4"]

visibility/opacity = 0.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
clip_text = true

[connection signal="pressed" from="Skill1/button" to="." method="_on_skill1_pressed"]

[connection signal="pressed" from="Skill2/button" to="." method="_on_skill2_pressed"]

[connection signal="pressed" from="Skill3/button" to="." method="_on_skill3_pressed"]

[connection signal="pressed" from="Skill4/button" to="." method="_on_skill4_pressed"]


